# dev_toolkit_1

./: .gitignore  Cargo.toml
scripts/: automation_script.py  requirements.txt
src/: app.rs  main.rs
src/events/: handler.rs  mod.rs
src/models/: clipboard.rs  config.rs  http.rs  http_client.rs  log_entry.rs  mod.rs  template.rs  tree.rs
src/modes/: mod.rs
src/modes/automation/: browser.rs  mod.rs  state.rs  templates.rs
src/services/: auth_service.rs  http_collection_storage.rs  mod.rs  template_storage.rs
src/ui/: layout.rs  mod.rs
src/ui/components/: automation_form.rs  collections_tree.rs  delete_confirmation_dialog.rs  folder_dialog.rs  help_dialog.rs  http_request_editor.rs  http_response_viewer.rs  import_dialog.rs  logging_panel.rs  mod.rs  rename_dialog.rs  status_line.rs  template_dialog.rs
